# gtkwaveCodex

./: .gitignore  CMakeLists.txt  README.md
include/: main_window.h  signal_tree.h  simple_fst_reader.h  waveform_view.h
src/: main.cpp
src/fst/: simple_fst_reader.cpp
src/ui/: main_window.cpp  signal_tree.cpp  waveform_view.cpp
test_data/: sample.fst
